# rust-axum-aws-deployment-demo

./: .env.development.sample  .env.production.sample  .gitignore  Cargo.toml  README.md  rust-axum-aws-deployment-demo.postman_collection.json
.cargo/: config.toml
config/: base.toml  development.toml  production.toml
src/: lib.rs  main.rs
src/core/: mod.rs  router.rs
src/core/controllers/: base.rs  health.rs  me.rs  mod.rs
src/middlewares/: logging_middleware.rs  request_timeout_middleware.rs
src/utils/: load_config.rs  load_env.rs
